--- a/style.css
+++ b/style.css
@@ -21,15 +21,20 @@ body {
   gap: 10px;
 }
 .card {
-  display: grid;
-  grid-template-columns: 50px 5px;
-  grid-template-rows: 50px 50px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  width: 250px;
+  width: max(30%, 200px);
   grid-auto-rows: 50px;
   justify-self: center;
+}
+
+.card p {
+  font-size: clamp(0.8rem, 4vh);
 }
 
 .add-book {
@@ -53,9 +58,13 @@ form {
 .form {
   background-color: white;
   display: grid;
-  width: clamp(10vh, 500px, 500px);
   font-size: 1rem;
   margin: 10px;
+}
+
+form {
+  width: max(30%, 200px);
+  height: max(30%, 200px);
 }
 
 input {
@@ -75,4 +84,15 @@ label {
 #checkbox {
   width: 10px;
   height: 10px;
+}
+
+button.delete {
+  width: 10px;
+  height: 10px;
+  border: none;
+  background: none;
+  align-self: flex-end;
+  color: red;
+  font-size: 1em;
+  margin-right: 10px;
 }
